--- a/cfgs/config_ssn_cls.yaml
+++ b/cfgs/config_ssn_cls.yaml
@@ -3,7 +3,7 @@ common:
 
     num_points: 1024
     num_classes: 40
-    batch_size: 32
+    batch_size: 128
     
     base_lr: 0.001
     lr_clip: 0.00001
@@ -29,4 +29,4 @@ common:
     
     checkpoint: ''        # the model to start from
     save_path: cls
-    data_root: /home/cv_jcy/Pytorch_Workspace/Pointnet2_PyTorch/pointnet2/data/ #$data_root$
+    data_root: '/media/disk3/pyy/RSCNN_Pytorch1.0/modelnet40_ply_hdf5_2048'
